--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
         <!-- Author: connor Knight -->
             <meta charset="UTF-8">
-            <link rel="stylesheet" type="text/css" href="css/layout1.css">
+            <link rel="stylesheet" type="text/css" href="CSS/layout1.css">
             <link rel="icon" href="resources/icon.png" type="image/x-icon">
             <title></title>
         </head>
