--- a/sitelist.html
+++ b/sitelist.html
@@ -5,13 +5,13 @@
             <meta charset="UTF-8">
             <link rel="stylesheet" type="text/css" href="CSS/layout1.css">
             <link rel="icon" href="resources/icon.png" type="image/x-icon">
-            <title>Connor Knight's Portfolio</title>
+            <title>Site List</title>
         </head>
 
         <body>
             <header>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="">Home</a></li>
                     <li><a href="">one</a></li>
                     <li><a href="">two</a></li>
                     <li><a href="">three</a></li>
