--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <head>
         <!-- Author: connor Knight -->
             <meta charset="UTF-8">
+            <link rel="stylesheet" type="text/css" href="CSS/headerCSS.css">
             <link rel="stylesheet" type="text/css" href="CSS/layout1.css">
             <link rel="icon" href="resources/icon.png" type="image/x-icon">
             <title>Connor Knight's Portfolio</title>
@@ -12,9 +13,9 @@
             <header>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="">one</a></li>
-                    <li><a href="">two</a></li>
-                    <li><a href="">three</a></li>
+                    <li><a href="">Resume</a></li>
+                    <li><a href="">Contact Me</a></li>
+                    <li><a href=""></a></li>
                     <li><a href="sitelist.html">My Sites</a></li>
                 </ul>
             </header>
