--- a/sitelist.html
+++ b/sitelist.html
@@ -3,7 +3,8 @@
         <head>
         <!-- Author: connor Knight -->
             <meta charset="UTF-8">
-            <link rel="stylesheet" type="text/css" href="CSS/layout1.css">
+            <link rel="stylesheet" type="text/css" href="CSS/headerCSS.css">
+            <link rel="stylesheet" type="text/css" href="CSS/layout2.css">
             <link rel="icon" href="resources/icon.png" type="image/x-icon">
             <title>Site List</title>
         </head>
@@ -11,7 +12,7 @@
         <body>
             <header>
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="">one</a></li>
                     <li><a href="">two</a></li>
                     <li><a href="">three</a></li>
