header and footer are done
header and footer are done

--- a/skills.html
+++ b/skills.html
@@ -4,9 +4,9 @@
         <!-- Author: connor Knight -->
             <meta charset="UTF-8">
             <link rel="stylesheet" type="text/css" href="CSS/headerCSS.css">
-            <link rel="stylesheet" type="text/css" href="CSS/index layout.css">
+            <link rel="stylesheet" type="text/css" href="CSS/layout2.css">
             <link rel="icon" href="resources/icon.png" type="image/x-icon">
-            <title>Connor Knight's Portfolio</title>
+            <title>Skills</title>
         </head>
 
         <body>
