--- a/sitelist.html
+++ b/sitelist.html
@@ -4,7 +4,7 @@
         <!-- Author: connor Knight -->
             <meta charset="UTF-8">
             <link rel="stylesheet" type="text/css" href="CSS/headerCSS.css">
-            <link rel="stylesheet" type="text/css" href="CSS/layout2.css">
+            <link rel="stylesheet" type="text/css" href="CSS/sitelist layout.css">
             <link rel="icon" href="resources/icon.png" type="image/x-icon">
             <title>Site List</title>
         </head>
@@ -13,9 +13,9 @@
             <header>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="">one</a></li>
-                    <li><a href="">two</a></li>
-                    <li><a href="">three</a></li>
+                    <li><a href="resume.html">Resume</a></li>
+                    <li><a href="contact.html">Contact Me</a></li>
+                    <li><a href="skills.html">Skills</a></li>
                     <li><a href="sitelist.html">My Sites</a></li>
                 </ul>
             </header>
@@ -23,7 +23,7 @@
 
             </div>
             <footer>
-
+                <p>This Site was and is still maintained by Connor Knight</p>
             </footer>
         </body>
     </html>
