--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
                     <li><a href="sitelist.html">My Sites</a></li>
                 </ul>
             </header>
-            <div>
-
+            <div class="body">
+                <h1 class="header">Connor Knight</h1>
+                <div class="bio">
+                    <h2>Bio</h2>
+                    <p>My name is Connor Knight. My family has six children and I am the eldest. I currently go to school at Liberty High school and West-MEC.</p>
+                </div>
+                <div class="MiiImg">
+                    <img src="resources/MiiNow.jpg" alt="me">
+                </div>
             </div>
             <footer>
                 <p>This Site was and is still maintained by Connor Knight</p>
