picture edit and new page flesh
edit picture and new page flesh

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
         <!-- Author: connor Knight -->
             <meta charset="UTF-8">
             <link rel="stylesheet" type="text/css" href="CSS/headerCSS.css">
-            <link rel="stylesheet" type="text/css" href="CSS/layout2.css">
+            <link rel="stylesheet" type="text/css" href="CSS/contact.css">
             <link rel="icon" href="resources/icon.png" type="image/x-icon">
             <title>Contact Me</title>
         </head>
