--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,12 @@
                     <li><a href="sitelist.html">My Sites</a></li>
                 </ul>
             </header>
-            <div>
-
+            <div class="body">
+                <h1></h1>
+            </div>
+            <div class="body">
+                <h2>The school I am training at.</h2>
+                <div class="mapouter"><div class="gmap_canvas"><iframe id="gmap_canvas" src="https://maps.google.com/maps?q=1617%20W%20Williams%20Dr%2C%20Phoenix%2C%20AZ%2085027&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{position:relative;text-align:center;}.gmap_canvas {overflow:hidden;background:none!important;}</style></div>
             </div>
             <footer>
                 <p>This Site was and is still maintained by Connor Knight</p>
