--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,11 @@
                 </ul>
             </header>
             <div class="body">
-                <h1></h1>
-            </div>
-            <div class="body">
+                <h1>Contact Me</h1>
+                <h2>Phone Number</h2>
+                <h3><a href="tel:+16236961706"><p>+16236961706</p></a></h3>
+                <h2>Email</h2>
+                <h3><a href="mailto:cwkni605@gmail.com"><p>cwkni605@gmail.com</p></a></h3>
                 <h2>The school I am training at.</h2>
                 <div class="mapouter"><div class="gmap_canvas"><iframe id="gmap_canvas" src="https://maps.google.com/maps?q=1617%20W%20Williams%20Dr%2C%20Phoenix%2C%20AZ%2085027&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{position:relative;text-align:center;}.gmap_canvas {overflow:hidden;background:none!important;}</style></div>
             </div>
