added pictures and worked on site list site
added pictures to the resources folder but not to the page and worked on site list site.

--- a/sitelist.html
+++ b/sitelist.html
@@ -19,7 +19,18 @@
                     <li><a href="sitelist.html">My Sites</a></li>
                 </ul>
             </header>
-            <div>
+            <div class="body">
+
+                <div>
+                    <a href="">
+                        <img src="resources/CodingSite.png" alt="West-MEC prototype Site">
+                        <br>
+                        <p>west-mec site prototype</p>
+                    </a>
+                </div>
+                <div>ieuwrbvowerbvooehnvoierjvnoiehlwfvbuhfivbo8eryhyidfbvoeruifbvnoreu</div>
+                <div>ieuwrbvowerbvorbtvobrtovbotvboetbvbuhfivbo8eryhyidfbvoeruifbvnoreu</div>
+                <div>ieuwrbvowerbvorbtvobrtovbotvboetbveuytbrwbvowrbvoiwrbiobwfovbrbiyw</div>
 
             </div>
             <footer>
