--- a/sitelist.html
+++ b/sitelist.html
@@ -20,18 +20,34 @@
                 </ul>
             </header>
             <div class="body">
-
                 <div>
-                    <a href="">
+                    <a href="websites/codingSite/Index.html">
                         <img src="resources/CodingSite.png" alt="West-MEC prototype Site">
                         <br>
                         <p>west-mec site prototype</p>
                     </a>
                 </div>
-                <div>ieuwrbvowerbvooehnvoierjvnoiehlwfvbuhfivbo8eryhyidfbvoeruifbvnoreu</div>
-                <div>ieuwrbvowerbvorbtvobrtovbotvboetbvbuhfivbo8eryhyidfbvoeruifbvnoreu</div>
-                <div>ieuwrbvowerbvorbtvobrtovbotvboetbveuytbrwbvowrbvoiwrbiobwfovbrbiyw</div>
-
+                <div>
+                    <a href="websites/Arizona/Index.html">
+                        <img src="resources/ArizonaSite.png" alt="Arizona Site">
+                        <br>
+                        <p>Mock Arizona State Site</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="websites/l">
+                        <img src="resources/" alt="">
+                        <br>
+                        <p></p>
+                    </a>
+                </div>
+                <div>
+                    <a href="websites/">
+                        <img src="resources/" alt="">
+                        <br>
+                        <p></p>
+                    </a>
+                </div>
             </div>
             <footer>
                 <p>This Site was and is still maintained by Connor Knight</p>
