finishing touches and overall completion
finishing touches and overall completion, completed the resume page and skills page, did touch ups on others.

--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
         <!-- Author: connor Knight -->
             <meta charset="UTF-8">
             <link rel="stylesheet" type="text/css" href="CSS/headerCSS.css">
-            <link rel="stylesheet" type="text/css" href="CSS/layout2.css">
+            <link rel="stylesheet" type="text/css" href="CSS/resume.css">
             <link rel="icon" href="resources/icon.png" type="image/x-icon">
             <title>Resume</title>
         </head>
@@ -19,8 +19,8 @@
                     <li><a href="sitelist.html">My Sites</a></li>
                 </ul>
             </header>
-            <div>
-
+            <div class="body">
+                <iframe src="resources/Connor Knight Resume.pdf" frameborder="0"></iframe>
             </div>
             <footer>
                 <p>This Site was and is still maintained by Connor Knight</p>
