--- a/sitelist.html
+++ b/sitelist.html
@@ -35,17 +35,17 @@
                     </a>
                 </div>
                 <div>
-                    <a href="websites/l">
+                    <a>
                         <img src="resources/" alt="">
                         <br>
-                        <p></p>
+                        <p>More to come !</p>
                     </a>
                 </div>
                 <div>
-                    <a href="websites/">
+                    <a>
                         <img src="resources/" alt="">
                         <br>
-                        <p></p>
+                        <p>More to come !</p>
                     </a>
                 </div>
             </div>
