--- a/skills.html
+++ b/skills.html
@@ -4,7 +4,7 @@
         <!-- Author: connor Knight -->
             <meta charset="UTF-8">
             <link rel="stylesheet" type="text/css" href="CSS/headerCSS.css">
-            <link rel="stylesheet" type="text/css" href="CSS/layout2.css">
+            <link rel="stylesheet" type="text/css" href="CSS/skills.css">
             <link rel="icon" href="resources/icon.png" type="image/x-icon">
             <title>Skills</title>
         </head>
@@ -19,8 +19,57 @@
                     <li><a href="sitelist.html">My Sites</a></li>
                 </ul>
             </header>
-            <div>
-
+            <div class="body">
+                <table>
+                    <tr>
+                        <th>HTML Skills</th>
+                        <td>X</td>
+                        <td>X</td>
+                        <td>X</td>
+                        <td>X</td>
+                        <td>O</td>
+                    </tr>
+                    <tr>
+                        <th>CSS Skills</th>
+                        <td>X</td>
+                        <td>X</td>
+                        <td>X</td>
+                        <td>O</td>
+                        <td>O</td>
+                    </tr>
+                    <tr>
+                        <th>Java Skills</th>
+                        <td>X</td>
+                        <td>X</td>
+                        <td>X</td>
+                        <td>O</td>
+                        <td>O</td>
+                    </tr>
+                    <tr>
+                        <th>Python Skills</th>
+                        <td>X</td>
+                        <td>X</td>
+                        <td>O</td>
+                        <td>O</td>
+                        <td>O</td>
+                    </tr>
+                    <tr>
+                        <th>Social Skills</th>
+                        <td>X</td>
+                        <td>O</td>
+                        <td>O</td>
+                        <td>O</td>
+                        <td>O</td>
+                    </tr>
+                    <tr>
+                        <th>Gamer Skills</th>
+                        <td>X</td>
+                        <td>X</td>
+                        <td>X</td>
+                        <td>X</td>
+                        <td>O</td>
+                    </tr>
+                </table>
             </div>
             <footer>
                 <p>This Site was and is still maintained by Connor Knight</p>
