modification and improvement of many things
modification and improvement of many things

--- a/resume.html
+++ b/resume.html
@@ -21,6 +21,7 @@
             </header>
             <div class="body">
                 <iframe src="resources/Connor Knight Resume.pdf" frameborder="0"></iframe>
+                <a href="resources/Connor Knight Resume.pdf">Download</a>
             </div>
             <footer>
                 <p>This Site was and is still maintained by Connor Knight</p>
