finishing touches using Mr.B's feedback
finishing touches and overall completion on the skills page, did touch ups on the header and footer.

--- a/skills.html
+++ b/skills.html
@@ -23,51 +23,51 @@
                 <table>
                     <tr>
                         <th>HTML Skills</th>
-                        <td>X</td>
-                        <td>X</td>
-                        <td>X</td>
-                        <td>X</td>
-                        <td>O</td>
+                        <td><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/noStar.png" alt="star"></td>
                     </tr>
                     <tr>
                         <th>CSS Skills</th>
-                        <td>X</td>
-                        <td>X</td>
-                        <td>X</td>
-                        <td>O</td>
-                        <td>O</td>
+                        <td><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/noStar.png" alt="star"></td>
+                        <td><img src="resources/noStar.png" alt="star"></td>
                     </tr>
                     <tr>
                         <th>Java Skills</th>
-                        <td>X</td>
-                        <td>X</td>
-                        <td>X</td>
-                        <td>O</td>
-                        <td>O</td>
+                        <td><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/noStar.png" alt="star"></td>
+                        <td><img src="resources/noStar.png" alt="star"></td>
                     </tr>
                     <tr>
                         <th>Python Skills</th>
-                        <td>X</td>
-                        <td>X</td>
-                        <td>O</td>
-                        <td>O</td>
-                        <td>O</td>
+                        <td><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/noStar.png" alt="star"></td>
+                        <td><img src="resources/noStar.png" alt="star"></td>
+                        <td><img src="resources/noStar.png" alt="star"></td>
                     </tr>
                     <tr>
                         <th>Social Skills</th>
-                        <td>X</td>
-                        <td>O</td>
-                        <td>O</td>
-                        <td>O</td>
-                        <td>O</td>
+                        <td><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/noStar.png" alt="star"></td>
+                        <td><img src="resources/noStar.png" alt="star"></td>
+                        <td><img src="resources/noStar.png" alt="star"></td>
+                        <td><img src="resources/noStar.png" alt="star"></td>
                     </tr>
                     <tr>
                         <th>Gamer Skills</th>
-                        <td>X</td>
-                        <td>X</td>
-                        <td>X</td>
-                        <td>X</td>
-                        <td>O</td>
+                        <td><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/noStar.png" alt="star"></td>
                     </tr>
                 </table>
             </div>
