small changes to all sites
adding the the site list and remodeled the index, while still trying to get the table to work, and maybe a few more things

--- a/resume.html
+++ b/resume.html
@@ -19,12 +19,29 @@
                     <li><a href="sitelist.html">My Sites</a></li>
                 </ul>
             </header>
-            <div class="body">
-                <iframe src="resources/Connor Knight Resume.pdf" frameborder="0"></iframe>
+            <div class="body" oncopy="onTheCopy()">
+                <h1>Connor Knight</h1>
+                <h2>Email: Cwkni605@gmail.com</h2>
+                <h1>Personal Profile:</h1>
+                <h3>Creative, Patient first year Coding student who is mechanically inclined and able to work under pressure. Seeking the position of Web Developer.</h3>
+                <h1>Knowledge, Skills, and Abilities:</h1>
+                <ul>
+                    <li><h3> Active Learning — Understanding the implications of new information for both current and future problem-solving and decision-making.</h3></li>
+                    <li><h3>Complex Problem Solving — Identifying complex problems and reviewing related information to develop and evaluate options and implement solutions.</h3></li>
+                    <li><h3>Monitoring — Monitoring/Assessing performance of yourself, other individuals, or organizations to make improvements or take corrective action.</h3></li>
+                    <li><h3>Systems Analysis — Determining how a system should work and how changes in conditions, operations, and the environment will affect outcomes.</h3></li>
+                    <li><h3>Programming — Writing computer programs for various purposes.</h3></li>
+                </ul>
                 <a href="resources/Connor Knight Resume.pdf">Download</a>
             </div>
             <footer>
                 <p>This Site was and is still maintained by Connor Knight</p>
             </footer>
+            <script>
+                function onTheCopy()
+                {
+                    alert("There is a download button at the botton for your convenience.");
+                }
+            </script>
         </body>
     </html>
