--- a/skills.html
+++ b/skills.html
@@ -23,50 +23,42 @@
                 <table>
                     <tr>
                         <th>HTML Skills</th>
-                        <td><img src="resources/star.png" alt="star"></td>
-                        <td><img src="resources/star.png" alt="star"></td>
-                        <td><img src="resources/star.png" alt="star"></td>
-                        <td><img src="resources/star.png" alt="star"></td>
-                        <td><img src="resources/noStar.png" alt="star"></td>
+                        <td id="filled"><img src="resources/star.png" alt="star"></td>
+                        <td id="filled"><img src="resources/star.png" alt="star"></td>
+                        <td id="filled"><img src="resources/star.png" alt="star"></td>
+                        <td id="filled"><img src="resources/star.png" alt="star"></td>
+                        <td id="filled" class="end"><img src="resources/star.png" alt="star"></td>
                     </tr>
                     <tr>
                         <th>CSS Skills</th>
-                        <td><img src="resources/star.png" alt="star"></td>
-                        <td><img src="resources/star.png" alt="star"></td>
-                        <td><img src="resources/star.png" alt="star"></td>
+                        <td id="filled"><img src="resources/star.png" alt="star"></td>
+                        <td id="filled"><img src="resources/star.png" alt="star"></td>
+                        <td id="filled"><img src="resources/star.png" alt="star"></td>
+                        <td id="filled" class="end"><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/noStar.png" alt="star"></td>
+                    </tr>
+                    <tr>
+                        <th>Java Script Skills</th>
+                        <td id="filled"><img src="resources/star.png" alt="star"></td>
+                        <td id="filled"><img src="resources/star.png" alt="star"></td>
+                        <td id="filled" class="end"><img src="resources/star.png" alt="star"></td>
                         <td><img src="resources/noStar.png" alt="star"></td>
                         <td><img src="resources/noStar.png" alt="star"></td>
                     </tr>
                     <tr>
                         <th>Java Skills</th>
-                        <td><img src="resources/star.png" alt="star"></td>
-                        <td><img src="resources/star.png" alt="star"></td>
-                        <td><img src="resources/star.png" alt="star"></td>
+                        <td id="filled"><img src="resources/star.png" alt="star"></td>
+                        <td id="filled" class="end"><img src="resources/star.png" alt="star"></td>
+                        <td><img src="resources/noStar.png" alt="star"></td>
                         <td><img src="resources/noStar.png" alt="star"></td>
                         <td><img src="resources/noStar.png" alt="star"></td>
                     </tr>
                     <tr>
                         <th>Python Skills</th>
-                        <td><img src="resources/star.png" alt="star"></td>
-                        <td><img src="resources/star.png" alt="star"></td>
+                        <td id="filled"><img src="resources/star.png" alt="star"></td>
+                        <td id="filled" class="end"><img src="resources/star.png" alt="star"></td>
                         <td><img src="resources/noStar.png" alt="star"></td>
                         <td><img src="resources/noStar.png" alt="star"></td>
-                        <td><img src="resources/noStar.png" alt="star"></td>
-                    </tr>
-                    <tr>
-                        <th>Social Skills</th>
-                        <td><img src="resources/star.png" alt="star"></td>
-                        <td><img src="resources/noStar.png" alt="star"></td>
-                        <td><img src="resources/noStar.png" alt="star"></td>
-                        <td><img src="resources/noStar.png" alt="star"></td>
-                        <td><img src="resources/noStar.png" alt="star"></td>
-                    </tr>
-                    <tr>
-                        <th>Gamer Skills</th>
-                        <td><img src="resources/star.png" alt="star"></td>
-                        <td><img src="resources/star.png" alt="star"></td>
-                        <td><img src="resources/star.png" alt="star"></td>
-                        <td><img src="resources/star.png" alt="star"></td>
                         <td><img src="resources/noStar.png" alt="star"></td>
                     </tr>
                 </table>
