--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             </header>
             <div class="body">
                 <h1 class="header">Connor Knight</h1>
+                <div class="MiiImg">
+                    <img src="resources/crest.gif" alt="NotMyCrest">
+                </div>
                 <div class="bio">
                     <h2>Bio</h2>
-                    <p>My name is Connor Knight. My family has six children and I am the eldest. I currently go to school at Liberty High school and West-MEC. I have taken every computer class that my school offers, including AP computer science. I like to program and make things. I have done cross country and long distance track every year so far. I am currently getting the mateirals to build a mini foundry to cast and forge with metal. </p>
-                </div>
-                <div class="MiiImg">
-                    <img src="resources/SkillConjuration.png" alt="me">
+                    <p>My name is Connor Knight. My family has six children and I am the eldest. I currently go to school at Liberty High school and West-MEC. I have taken every computer class that my school offers, including AP computer science. I like to program and make things. I have done cross country and long distance track every year of my high shool years. I am have a small foundry and have melt metals into a more refined bar. </p>
                 </div>
             </div>
             <footer>
