--- a/sitelist.html
+++ b/sitelist.html
@@ -20,25 +20,26 @@
                 </ul>
             </header>
             <div class="body">
+                <h1 style="text-align: center; font-size: 100px;">My Sites</h1>
                 <div>
-                    <a href="websites/codingSite/Index.html">
+                    <a href="websites/codingSite/Index.html" target="blank">
                         <img src="resources/CodingSite.png" alt="West-MEC prototype Site">
                         <br>
                         <p>west-mec site prototype</p>
                     </a>
                 </div>
                 <div>
-                    <a href="websites/Arizona/Index.html">
+                    <a href="websites/Arizona/Index.html" target="blank">
                         <img src="resources/ArizonaSite.png" alt="Arizona Site">
                         <br>
                         <p>Mock Arizona State Site</p>
                     </a>
                 </div>
                 <div>
-                    <a>
-                        <img src="resources/" alt="">
+                    <a href="websites/Business-Site/index.html" target="blank">
+                        <img src="resources/BusinessSite.png" alt="Business">
                         <br>
-                        <p>More to come !</p>
+                        <p>Business Site</p>
                     </a>
                 </div>
                 <div>
