added a new site to the site list and a few small changes
added a new site to the site list and a few small changes build up from the last week.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="bio">
                     <h2>Bio</h2>
-                    <p>My name is Connor Knight. My family has six children and I am the eldest. I currently go to school at Liberty High school and West-MEC. I have taken every computer class that my school offers, including AP computer science. I like to program and make things. I have done cross country and long distance track every year of my high shool years. I am have a small foundry and have melt metals into a more refined bar. </p>
+                    <p>My name is Connor Knight. My family has six children and I am the eldest. I currently go to school at Liberty High school and West-MEC. I have taken every computer class that my school offers, including AP computer science. I like to program and make things. I have done cross country and long distance track every year of my high shool years. I am have a small foundry and have melt metals into a more refined bar. I love computer programming with a passion and wish to continue learning as much as possible. </p>
                 </div>
             </div>
             <footer>
