--- a/sitelist.html
+++ b/sitelist.html
@@ -43,10 +43,24 @@
                     </a>
                 </div>
                 <div>
+                    <a href="websites/additional webpages/teamCompare.html" target="blank">
+                        <img src="resources/compareSite.png" alt="Compare Site">
+                        <br>
+                        <p>Business Site</p>
+                    </a>
+                </div>
+                <div>
                     <a>
                         <img src="resources/" alt="">
                         <br>
-                        <p>More to come !</p>
+                        <p>More to come!</p>
+                    </a>
+                </div>
+                <div>
+                    <a>
+                        <img src="resources/" alt="">
+                        <br>
+                        <p>More to come!</p>
                     </a>
                 </div>
             </div>
