Added a new page to the site list and documented all of the index's CSS
Added a new page to the site list and documented all of the index's CSS, and probably a few other things.

--- a/sitelist.html
+++ b/sitelist.html
@@ -46,14 +46,14 @@
                     <a href="websites/additional webpages/teamCompare.html" target="blank">
                         <img src="resources/compareSite.png" alt="Compare Site">
                         <br>
-                        <p>Business Site</p>
+                        <p>Comparing Website</p>
                     </a>
                 </div>
                 <div>
-                    <a>
-                        <img src="resources/" alt="">
+                    <a href="websites/Car-project/index.html" target="blank">
+                        <img src="resources/TankStoreSite.png" alt="Tank store site preview">
                         <br>
-                        <p>More to come!</p>
+                        <p>Tank Store Website</p>
                     </a>
                 </div>
                 <div>
