Reworked the header and added a standard color
I made the header look much better and have added animations. I fixed the css on the site list page so now the animations so they can scale with the screen size.

--- a/sitelist.html
+++ b/sitelist.html
@@ -20,7 +20,7 @@
                 </ul>
             </header>
             <div class="body">
-                <h1 style="text-align: center; font-size: 100px;">My Sites</h1>
+                <h1>My Sites</h1>
                 <div>
                     <a href="websites/codingSite/Index.html" target="blank">
                         <img src="resources/CodingSite.png" alt="West-MEC prototype Site">
