More layouts, mobile optimizations, content additions
Added many more layouts for the different screen sizes. Changes to a bunch of css file to better accommodate mobile screens. Finally I added a little more content the three sites. I added a call scheduler to the contact me page.

--- a/sitelist.html
+++ b/sitelist.html
@@ -60,10 +60,9 @@
                     <a href="https://cwkni605.github.io/DSPage/" target="blank">
                         <img src="resources/ToySite.png" alt="My first team project">
                         <br>
-                        <p id="twoLiner">Toy Project <br>(First Team Project)</p>
+                        <p id="twoLiner">Toy Project (First Team Project)</p>
                     </a>
                 </div>
-            </div>
             <footer>
                 <p>This Site was and is still maintained by Connor Knight</p>
             </footer>
