--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             </header>
             <div class="body">
                 <h1>Contact Me</h1>
-                <h2>Email:  <a href="mailto:cknight167@west-mec.org">cknight167@west-mec.org</a></h2>
+                <h2>Email: <a href="mailto:cknight167@west-mec.org">cknight167@west-mec.org</a><br>Call: <a href="https://forms.gle/bspcW9g21c8ZPkkRA" target="blank">Schedule</a></h2>
                 <h2>The school I am training at a school that is called West-MEC.</h2>
                 <div class="mapouter"><div class="gmap_canvas"><iframe id="gmap_canvas" src="https://maps.google.com/maps?q=1617%20W%20Williams%20Dr%2C%20Phoenix%2C%20AZ%2085027&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{position:relative;text-align:center;}.gmap_canvas {overflow:hidden;background:none!important;}</style></div>
             </div>
