added more layouts and optimizations, also added more to the skills page
added more layouts and optimizations, also added some text to the skills page to describe it better.

--- a/skills.html
+++ b/skills.html
@@ -19,7 +19,11 @@
                     <li><a href="sitelist.html">My Sites</a></li>
                 </ul>
             </header>
+            <h1 class="header">My Skills</h1>
             <div class="body">
+                <div class="skillBio">
+                    <p>I have many skills, but I am most confident about my ability to code in HTML. I am pretty good at css and javascript. I also know a lot about java but there is still so much more I could learn. I know a little bit of python and I have done some advanced things with it but I need to know a lot more before I am a pro at it. </p>
+                </div>
                 <table>
                     <tr>
                         <th>HTML Skills</th>
