final update before upload
this is the mark between alpha and beta. I added documentation to all css pages and js pages. I also make the content look more professional. I added the ability to change the layout in the page with button at the bottom.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             <link rel="stylesheet" type="text/css" href="CSS/index layout.css">
             <link rel="icon" href="resources/icon.png" type="image/x-icon">
             <title>Connor Knight's Portfolio</title>
+            <script src="JS/index.js"></script>
         </head>
 
         <body>
@@ -19,6 +20,7 @@
                     <li><a href="sitelist.html">My Sites</a></li>
                 </ul>
             </header>
+            <style id="theNew"></style>
             <div class="body">
                 <h1 class="header">Connor Knight</h1>
                 <div class="MiiImg">
@@ -26,11 +28,15 @@
                 </div>
                 <div class="bio">
                     <h2>Bio</h2>
-                    <p>My name is Connor Knight. I currently go to school at Liberty High school and West-MEC. I have taken every computer class that my school offers, including AP computer science. I like to program and make things. I have done cross country and long distance track every year of my high shool years. I am have a small foundry and have melt aluminum into a more refined bar. I love computer programming with a passion and wish to continue learning as much as possible. I do not work yet.</p>
+                    <p>My name is Connor Knight. I currently go to school at Liberty High school and West-MEC. I have taken every computer class that my school offers, including AP computer science. I like to program and make things. I have done cross country and long distance track every year of my high shool years. I have aided many of my now Eagle Scout friends with their Eagle Scout project. I have a small foundry and have melted aluminum into a more refined bar. I love computer programming with a passion and wish to continue learning as much as possible. I do not work outside of school yet.</p>
+                </div>
+                <div class="MiiImg2">
+                    <img src="resources/MiiNow.jpg" alt="NotMyCrest">
                 </div>
             </div>
             <footer>
                 <p>This Site was and is still maintained by Connor Knight</p>
+                <button onclick="layout1()">Layout one</button><button onclick="layout2()">Layout two</button>
             </footer>
         </body>
     </html>
