--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,7 @@
             <link rel="stylesheet" type="text/css" href="CSS/resume.css">
             <link rel="icon" href="resources/icon.png" type="image/x-icon">
             <title>Resume</title>
+            <script src="JS/resume.js"></script>
         </head>
 
         <body>
@@ -19,16 +20,17 @@
                     <li><a href="sitelist.html">My Sites</a></li>
                 </ul>
             </header>
+            <style id="theNew"></style>
             <div class="body" oncopy="onTheCopy()">
                 <h1>Connor Knight</h1>
                 <h2>Email: Cwkni605@gmail.com</h2>
                 <h1>Personal Profile:</h1>
-                <h3>Creative, Patient first year Coding student who is mechanically inclined and able to work under pressure. Seeking the position of Web Developer.</h3>
+                <h3>I am a creative and patient first-year coding student who is mechanically inclined and able to work under pressure. Seeking the position of Web Developer.</h3>
                 <h1>Knowledge, Skills, and Abilities:</h1>
                 <ul>
                     <li><h3> Active Learning — Understanding the implications of new information for both current and future problem-solving and decision-making.</h3></li>
                     <li><h3>Complex Problem Solving — Identifying complex problems and reviewing related information to develop and evaluate options and implement solutions.</h3></li>
-                    <li><h3>Monitoring — Monitoring/Assessing performance of yourself, other individuals, or organizations to make improvements or take corrective action.</h3></li>
+                    <li><h3>Monitoring — Monitoring/Assessing performance of myself, other individuals, or organizations to make improvements or take corrective action.</h3></li>
                     <li><h3>Systems Analysis — Determining how a system should work and how changes in conditions, operations, and the environment will affect outcomes.</h3></li>
                     <li><h3>Programming — Writing computer programs for various purposes.</h3></li>
                 </ul>
@@ -36,6 +38,7 @@
             </div>
             <footer>
                 <p>This Site was and is still maintained by Connor Knight</p>
+                <button onclick="layout1()">Layout one</button><button onclick="layout2()">Layout two</button>
             </footer>
             <script>
                 function onTheCopy()
