--- a/sitelist.html
+++ b/sitelist.html
@@ -7,6 +7,7 @@
             <link rel="stylesheet" type="text/css" href="CSS/sitelist layout.css">
             <link rel="icon" href="resources/icon.png" type="image/x-icon">
             <title>Site List</title>
+            <script src="JS/siteList.js"></script>
         </head>
 
         <body>
@@ -19,6 +20,7 @@
                     <li><a href="sitelist.html">My Sites</a></li>
                 </ul>
             </header>
+            <style id="theNew"></style>
             <div class="body">
                 <h1>My Sites</h1>
                 <div>
@@ -65,6 +67,7 @@
                 </div>
             <footer>
                 <p>This Site was and is still maintained by Connor Knight</p>
+                <button onclick="layout1()">Layout one</button><button onclick="layout2()">Layout two</button>
             </footer>
         </body>
     </html>
