--- a/skills.html
+++ b/skills.html
@@ -7,6 +7,7 @@
             <link rel="stylesheet" type="text/css" href="CSS/skills.css">
             <link rel="icon" href="resources/icon.png" type="image/x-icon">
             <title>Skills</title>
+            <script src="JS/skills.js"></script>
         </head>
 
         <body>
@@ -19,10 +20,11 @@
                     <li><a href="sitelist.html">My Sites</a></li>
                 </ul>
             </header>
+            <style id="theNew"></style>
             <h1 class="header">My Skills</h1>
             <div class="body">
                 <div class="skillBio">
-                    <p>I have many skills, but I am most confident about my ability to code in HTML. I am pretty good at css and javascript. I also know a lot about java but there is still so much more I could learn. I know a little bit of python and I have done some advanced things with it but I need to know a lot more before I am a pro at it. </p>
+                    <p>I have many skills, and I am most confident about my ability to code in HTML. I am proficient at css and javascript. I am good at java but there is still so much more I could learn. I know a little bit of python. I have done some advanced work with Python, although I would like to learn a lot more. </p>
                 </div>
                 <table>
                     <tr>
@@ -69,6 +71,7 @@
             </div>
             <footer>
                 <p>This Site was and is still maintained by Connor Knight</p>
+                <button onclick="layout1()">Layout one</button><button onclick="layout2()">Layout two</button>
             </footer>
         </body>
     </html>
