--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,11 @@
             <link rel="stylesheet" type="text/css" href="CSS/contact.css">
             <link rel="icon" href="resources/icon.png" type="image/x-icon">
             <title>Contact Me</title>
+            <script src="JS/contact.js"></script>
         </head>
 
         <body>
+            <style id="theNew"></style>
             <header>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -21,12 +23,13 @@
             </header>
             <div class="body">
                 <h1>Contact Me</h1>
-                <h2>Email: <a href="mailto:cknight167@west-mec.org">cknight167@west-mec.org</a><br>Call: <a href="https://forms.gle/bspcW9g21c8ZPkkRA" target="blank">Schedule</a></h2>
-                <h2>The school I am training at a school that is called West-MEC.</h2>
+                <h2>Email: <a href="mailto:cknight167@west-mec.org">cknight167@west-mec.org</a><br>Call: <a href="tel:1234567890">123-456-7890</a><br>Schedule A Phone Meeting: <a href="https://forms.gle/5B1EQcPZtnrLFJXRA">Here</a></h2>
+                <h2>I am currently training at West-MEC. <strong>Western Maricopa Education Center</strong></h2>
                 <div class="mapouter"><div class="gmap_canvas"><iframe id="gmap_canvas" src="https://maps.google.com/maps?q=1617%20W%20Williams%20Dr%2C%20Phoenix%2C%20AZ%2085027&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{position:relative;text-align:center;}.gmap_canvas {overflow:hidden;background:none!important;}</style></div>
             </div>
             <footer>
                 <p>This Site was and is still maintained by Connor Knight</p>
+            <button onclick="layout1()">Layout one</button><button onclick="layout2()">Layout two</button>
             </footer>
         </body>
     </html>
